src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Next_Steps_Last_Updated__c</fullName>
        <description>Automatically timestamps when the &apos;Next Steps&apos; above were last updated</description>
        <inlineHelpText>Automatically timestamps when the &apos;Next Steps&apos; above were last updated</inlineHelpText>
        <label>Next Steps Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_interest_from_PoC_Instructor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if reasons for loss included: topic or target not interesting to PoC or Instructor</description>
        <inlineHelpText>Checked if reasons for loss included: topic or target not interesting to PoC or Instructor</inlineHelpText>
        <label>Weak interest from PoC/Instructor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_response_dormant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if reasons for loss included: partner was unresponsive to target.</description>
        <inlineHelpText>Checked if reasons for loss included: partner was unresponsive to target.</inlineHelpText>
        <label>No response/dormant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_details_on_loss__c</fullName>
        <description>Describe any additional commentary that would be useful in understanding why this target was lost</description>
        <inlineHelpText>Describe any additional commentary that would be useful in understanding why this target was lost</inlineHelpText>
        <label>Closed Lost Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Opps__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ongoing_Budget__c</fullName>
        <label>Ongoing Budget</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_ICP__c</fullName>
        <label>Opportunity ICP</label>
        <picklist>
            <picklistValues>
                <fullName>Ideal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfit</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Manager_Email__c</fullName>
        <label>Opportunity Owner&apos;s Manager&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Manager__c</fullName>
        <formula>Owner.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Lead_Source__c</fullName>
        <label>Original Lead Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity_Amount__c</fullName>
        <label>Original Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if reasons for loss exclude any of the other possible reasons listed</description>
        <inlineHelpText>Checked if reasons for loss exclude any of the other possible reasons listed</inlineHelpText>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Our_Competitive_Differentiator__c</fullName>
        <label>Our Competitive Differentiator</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outdated_Geo_Territory__c</fullName>
        <globalPicklist>Geo_Territory_Values</globalPicklist>
        <label>Outdated_Geo Territory</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Over_5K_Employees__c</fullName>
        <label>Over 5K Employees</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pilot_POC__c</fullName>
        <description>Is this a Pilot or Proof of Concept?</description>
        <inlineHelpText>Is this a Pilot or Proof of Concept?</inlineHelpText>
        <label>Pilot/POC?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Possible_Whale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possible Whale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Target_ACV__c</fullName>
        <label>Potential Target ACV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Model__c</fullName>
        <inlineHelpText>For B2B - add in details later</inlineHelpText>
        <label>Pricing Model</label>
        <picklist>
            <picklistValues>
                <fullName>Learner pre-pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Course Redemption (DEPRECATED)</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Licenses (DEPRECATED)</fullName>
                <color>#000099</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_Steps_Auto_tracked__c</fullName>
        <description>Automatic documentation of any previous &apos;Next Steps&apos; you had in this opportunity.</description>
        <inlineHelpText>Automatic documentation of any previous &apos;Next Steps&apos; you had in this opportunity. Will be updated whenever you update new next steps above.</inlineHelpText>
        <label>Prior Steps (Auto-tracked)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quarter_Created__c</fullName>
        <formula>CASE(MONTH( DATEVALUE (CreatedDate) ), 
1, &quot;Q1&quot; , 
2, &quot;Q1&quot;, 
3, &quot;Q1&quot;, 
4, &quot;Q2&quot;, 
5, &quot;Q2&quot;, 
6, &quot;Q2&quot;, 
7, &quot;Q3&quot;, 
8, &quot;Q3&quot;, 
9, &quot;Q3&quot;, 
10, &quot;Q4&quot;, 
11, &quot;Q4&quot;, 
12, &quot;Q4&quot;, 
&quot;None&quot;) 

&amp; &quot;-&quot; 

&amp;CASE(YEAR (DATEVALUE((CreatedDate ))), 
2007, &quot;2007&quot; , 
2008, &quot;2008&quot;, 
2009, &quot;2009&quot;, 
2010, &quot;2010&quot;, 
2011, &quot;2011&quot;, 
2012, &quot;2012&quot;, 
2013, &quot;2013&quot;, 
2014, &quot;2014&quot;, 
2015, &quot;2015&quot;, 
2016, &quot;2016&quot;, 
2017, &quot;2017&quot;, 
2018, &quot;2018&quot;, 
2019, &quot;2019&quot;, 
2020, &quot;2020&quot;, 
&quot;None&quot;)</formula>
        <label>Quarter Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Red_Flags__c</fullName>
        <label>Red Flags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referencabiliy__c</fullName>
        <description>Referenceability Type</description>
        <label>Referenceability</label>
        <picklist>
            <picklistValues>
                <fullName>White Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referenceability_Other__c</fullName>
        <description>Other text field for Referenceability</description>
        <label>Referenceability (Other)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region_Vertical_based_on_Owner__c</fullName>
        <formula>If(CreatedBy.LastName = &apos;Marques&apos;,&apos;EMEA&apos;, 
IF(OR(CreatedBy.LastName = &apos;Young&apos;,CreatedBy.LastName = &apos;Andrade&apos;),&apos;North America&apos;, 
IF(CreatedBy.LastName = &apos;Mays&apos;,&apos;Gov&apos;, 
IF(OR(CreatedBy.LastName = &apos;Shailaj&apos;,CreatedBy.LastName = &apos;Mehra&apos;),&apos;APAC&apos;, 
IF(CreatedBy.LastName = &apos;Munro&apos;,&apos;Wes&apos;,&apos;None&apos;) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region/Vertical based on Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_internally__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if reasons for loss included: topic or target being rejected internally at Coursera</description>
        <inlineHelpText>Checked if reasons for loss included: topic or target being rejected internally at Coursera</inlineHelpText>
        <label>Rejected internally at Coursera</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <description>Date on which the renewal is due; automatically defaults to 1 day after the Contract End Date (B2B)</description>
        <formula>Contract_End_Date__c +1</formula>
        <inlineHelpText>Date on which the renewal is due; automatically defaults to 1 day after the Contract End Date</inlineHelpText>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Forecast__c</fullName>
        <label>Renewal Forecast</label>
        <picklist>
            <picklistValues>
                <fullName>Guaranteed Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Most likely to renew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk of churn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Definite Churn</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reprehensibility__c</fullName>
        <description>Reprehensibility for B2B opportunities</description>
        <label>Reprehensibility</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Product_Customization__c</fullName>
        <inlineHelpText>Requires product customization and has ACV &lt; $1M</inlineHelpText>
        <label>Requires Product Customization</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reseller__c</fullName>
        <label>Reseller</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rick_Sync_Notes__c</fullName>
        <label>Rick Sync Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <description>For B2B: indirectly or directly sourced</description>
        <inlineHelpText>For B2B: indirectly or directly sourced</inlineHelpText>
        <label>Sales Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_Opty_Id_18_Digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Salesforce Opty Id 18 Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_ID__c</fullName>
        <label>Source ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Priorities__c</fullName>
        <inlineHelpText>Please specify list of top priorities</inlineHelpText>
        <label>Top Priorities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Courses__c</fullName>
        <label>Total Number of enrollments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Users__c</fullName>
        <label>Total Number of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_courses_per_user__c</fullName>
        <label>Total # of courses per user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Agreement__c</fullName>
        <inlineHelpText>Type of the agreement</inlineHelpText>
        <label>Type of Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Pool of enrollments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licenses</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uploaded_Executed_MSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Uploaded Executed MSA checkbox for B2B opportunities</description>
        <label>Uploaded Executed MSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Registration_Needed__c</fullName>
        <description>Does customer need vendor registration?</description>
        <inlineHelpText>Does customer need vendor registration?</inlineHelpText>
        <label>Vendor Registration Needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weak_no_interest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For B2B: Checked if lost due to low/no interest</description>
        <inlineHelpText>For B2B: Checked if lost due to low/no interest</inlineHelpText>
        <label>Weak/no interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_is_the_technical_scoping__c</fullName>
        <description>What is the technical scoping? for B2B opportunities</description>
        <label>What is the technical scoping?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Willing_to_provide_resources__c</fullName>
        <inlineHelpText>Willing to provide sufficient resources and time</inlineHelpText>
        <label>Willing to provide resources</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mkto_si__MarketoAnalyzer__c</fullName>
        <description>This creates a link to the Marketo Opportunity Influence Analyzer. This feature requires an active subscription to Marketo Revenue Cycle Analytics.</description>
        <formula>HYPERLINK (&quot;/apex/mkto_si__MarketoRedirect?actionName=salesInsightAnalytics&amp;reportType=AccountAnalyzer&amp;objType=Opportunity&amp;objId=&quot; &amp; Id, IMAGE($Label.mkto_si__marketo_logo_16, $Label.mkto_si__marketo_opportunity_analysis))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketo Opportunity Analysis</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>B2B_All_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>B2B: All Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>EMEA</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Stephanie,Heliatrice</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,Closed Lost - No Opportunity</value>
        </filters>
        <label>EMEA</label>
    </listViews>
    <listViews>
        <fullName>GOV_Open_Opps</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Becca,Lauren,Kevin,Leila</value>
        </filters>
        <label>GOV Open Opps</label>
    </listViews>
    <listViews>
        <fullName>India_Open_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Kunal,Aditya</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2016</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed/Lost - Future Interest,Closed/Lost - Dormant</value>
        </filters>
        <label>India Open Opps</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Renee_Open_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,Closed Lost - No Opportunity</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Renee</value>
        </filters>
        <label>Renee Open Opps</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>B2B_New_Business_Opportunity</fullName>
        <active>true</active>
        <businessProcess>B2B</businessProcess>
        <description>New business opportunity type for B2B group</description>
        <label>B2B New Business Opportunity</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ACV_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( 
Admin_Override__c = False, 
ISCHANGED(StageName), 
NOT(ISPICKVAL(StageName,&quot;Qualified Opportunity&quot;)),
ISBLANK( ACV_Quota_Retirement__c )
)</errorConditionFormula>
        <errorDisplayField>ACV_Quota_Retirement__c</errorDisplayField>
        <errorMessage>Please enter ACV</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Date_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(Admin_Override__c),
NOT($Profile.Name = &quot;System Administrator&quot;), 
ISCHANGED(CloseDate),
NOT(ISNEW()),
ISPICKVAL( PRIORVALUE( StageName ) , &quot;Closed Won&quot;)
)</errorConditionFormula>
        <errorMessage>Contact your system administrator to change close date of a closed/won opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Lost_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 Admin_Override__c = False, 
ISCHANGED(StageName), 
NOT( ISPICKVAL( PRIORVALUE( StageName ) , &quot;Closed Lost&quot;) ),
NOT ( ISPICKVAL (PRIORVALUE( StageName ), &quot;Closed Lost - No Opportunity&quot;) ),
OR(ISPICKVAL( StageName , &quot;Closed Lost&quot;),ISPICKVAL( StageName , &quot;Closed Lost - No Opportunity&quot;)),
 CloseDate &lt;&gt;  TODAY()
)</errorConditionFormula>
        <errorMessage>Use today&apos;s date as close date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Lost_Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
AND
(
Admin_Override__c = False, 
ISCHANGED(StageName), 
NOT( ISPICKVAL( PRIORVALUE( StageName ) , &quot;Closed Lost&quot;) ),
NOT ( ISPICKVAL (PRIORVALUE( StageName ), &quot;Closed Lost - No Opportunity&quot;) ),
OR(ISPICKVAL( StageName , &quot;Closed Lost&quot;), ISPICKVAL( StageName , &quot;Closed Lost - No Opportunity&quot;))
),
OR
(
ISPICKVAL ( Loss_Reason__c ,&quot;&quot; ),
LEN(Notes_details_on_loss__c) = 0 
))</errorConditionFormula>
        <errorMessage>Please make sure you to enter Closed Lost Reason and Closed Lost Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 Admin_Override__c = False, 
ISCHANGED(StageName), 
NOT( ISPICKVAL( PRIORVALUE( StageName ) , &quot;Closed Won&quot;) ),
ISPICKVAL( StageName , &quot;Closed Won&quot;),
 CloseDate &lt;&gt;  TODAY()
)</errorConditionFormula>
        <errorMessage>Use today&apos;s date as close date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Required_Fields_Part1</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
AND
(
 Admin_Override__c = False, 
ISCHANGED(StageName), 
NOT( ISPICKVAL( PRIORVALUE( StageName ) , &quot;Closed Won&quot;) ),
ISPICKVAL( StageName , &quot;Closed Won&quot;)

),

OR
(
ISNULL( Closed_Won_Reason__c ),
ISNULL ( Closed_Won_Detail__c ),
ISPICKVAL( LeadSource , &quot;&quot;)
))</errorConditionFormula>
        <errorMessage>Please enter Lead source, Closed won reason and Closed won detail.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Required_Fields_Part2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
AND 
( 
Admin_Override__c = False, 
ISCHANGED(StageName), 
NOT( ISPICKVAL( PRIORVALUE( StageName ) , &quot;Closed Won&quot;) ), 
ISPICKVAL( StageName , &quot;Closed Won&quot;)
),
OR 
( 
ISBLANK( Contract_Start_Date__c ), 
ISBLANK( Contract_End_Date__c ),
ISBLANK( Launch_Date__c )
)
)</errorConditionFormula>
        <errorDisplayField>Contract_Start_Date__c</errorDisplayField>
        <errorMessage>Please fill in the Contract start date, Contract end date, Contractual Launch Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Required_Fields_Part3</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( 
AND 
( 
Admin_Override__c = False, 
ISCHANGED(StageName), 
NOT( ISPICKVAL( PRIORVALUE( StageName ) , &quot;Closed Won&quot;) ), 
ISPICKVAL( StageName , &quot;Closed Won&quot;) 
), 
OR 
( 
ISBLANK( Total_Number_of_Courses__c )
)
)</errorConditionFormula>
        <errorDisplayField>Total_Number_of_Courses__c</errorDisplayField>
        <errorMessage>Please enter &apos;Total number of enrollments&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Required_Fields_Part4</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
AND(
Admin_Override__c = False, 
ISCHANGED(StageName), 
NOT(ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;))), 
ISNEW()),
ISPICKVAL( StageName , &quot;Closed Won&quot;), 
OR(ISBLANK(Amount), Amount &lt;= 0)
)</errorConditionFormula>
        <errorDisplayField>Amount</errorDisplayField>
        <errorMessage>Please make sure amount entered is greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Contract_End_Date__c&lt;= 
 Contract_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Contract_End_Date__c</errorDisplayField>
        <errorMessage>Please enter valid contract end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 Admin_Override__c = False, 
ISCHANGED(StageName),
NOT(ISPICKVAL(StageName,&quot;Development&quot;)), 
LEN( Description) = 0
)</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>Please add Description</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LMS_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 Admin_Override__c = False, 
ISCHANGED(StageName),
NOT(ISPICKVAL(StageName,&quot;Closed Won&quot;)), 
ISPICKVAL( LMS__c  , &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>LMS__c</errorDisplayField>
        <errorMessage>Please enter LMS</errorMessage>
    </validationRules>
</CustomObject>